fix: config and broken stylesheet

--- a/src/component-templates/component-template/new-component.module.scss
+++ b/src/component-templates/component-template/new-component.module.scss
@@ -1,2 +1,3 @@
-body {
+.root {
+    background-color: red;
 }
